--- a/src/bayesian_segmentation.ipynb
+++ b/src/bayesian_segmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "my_avg.camera.sensor_width_px=9504\n",
     "my_avg.camera.roi_height=1024\n",
     "my_avg.camera.roi_width=1024\n",
-    "my_avg.surface_resampler.points_per_square_mm=1\n"
+    "my_avg.surface_resampler.points_per_square_mm=2\n"
    ]
   },
   {
@@ -60,25 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading model from /home/arun/Autoviewpoint_Generation/InspectionMLviewpointGen/src/parts/hollow_hemisphere_2k.stl\n",
-      "Loading model: /home/arun/Autoviewpoint_Generation/InspectionMLviewpointGen/src/parts/hollow_hemisphere_2k.stl\n",
-      "folder: /home/arun/Autoviewpoint_Generation/InspectionMLviewpointGen/src/parts, ext: .stl\n",
-      "folder: /home/arun/Autoviewpoint_Generation/InspectionMLviewpointGen/src/parts/hollow_hemisphere_2k/PointCloud\n",
-      "2684\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "relative_path = os.path.join( 'parts', 't-stiffner_2k.stl')\n",
     "absolute_path = os.path.abspath(relative_path)\n",
-    "my_avg.load_model(absolute_path,\"m\",[0., 1., 0., 1.])\n",
+    "\n",
+    "# change \"m\" to \"mm\" in the load_model function if this cell does not work\n",
+    "my_avg.load_model(absolute_path,\"m\",[0., 1., 0., 1.]) \n",
     "my_avg.generate_pcd()\n",
     "pcd=PointCloud()\n",
     "pcd=my_avg.spcd.pcd\n",
@@ -99,154 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Partitioning part into planar patches:\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is not valid, incrementing K_high...\n",
-      "K_high = 8 is not valid, incrementing K_high...\n",
-      "K_high = 16 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 12, Valid: False\n",
-      "K: 14, Valid: False\n",
-      "K: 15, Valid: True\n",
-      "K: 15 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 0 into regions:\n",
-      "158.76650706249146\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: True\n",
-      "K: 2, Valid: False\n",
-      "K: 3 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 1 into regions:\n",
-      "157.52240612610865\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: False\n",
-      "K: 4 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 2 into regions:\n",
-      "165.510518908954\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: False\n",
-      "K: 4 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 3 into regions:\n",
-      "174.59180695381667\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: False\n",
-      "K: 4 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 4 into regions:\n",
-      "150.1229174216321\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: False\n",
-      "K: 4 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 5 into regions:\n",
-      "177.0856951090603\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: True\n",
-      "K: 2, Valid: False\n",
-      "K: 3 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 6 into regions:\n",
-      "173.16432452655064\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: False\n",
-      "K: 4 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 7 into regions:\n",
-      "242.86831333645551\n",
-      "Finding K upper bound...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is not valid, incrementing K_high...\n",
-      "K_high = 8 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 6, Valid: True\n",
-      "K: 5, Valid: True\n",
-      "K: 4, Valid: False\n",
-      "K: 5 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 8 into regions:\n",
-      "147.41848116931286\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: True\n",
-      "K: 2, Valid: False\n",
-      "K: 3 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 9 into regions:\n",
-      "185.2911112997396\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: True\n",
-      "K: 2, Valid: False\n",
-      "K: 3 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 10 into regions:\n",
-      "171.53895027617472\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: False\n",
-      "K: 4 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 11 into regions:\n",
-      "181.92003952409962\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: False\n",
-      "K: 4 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 12 into regions:\n",
-      "176.2280652173894\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is not valid, incrementing K_high...\n",
-      "K_high = 4 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 3, Valid: False\n",
-      "K: 4 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 13 into regions:\n",
-      "675.8626087034628\n",
-      "Finding K upper bound...\n",
-      "K_high = 6 is not valid, incrementing K_high...\n",
-      "K_high = 12 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 9, Valid: True\n",
-      "K: 7, Valid: False\n",
-      "K: 8, Valid: False\n",
-      "K: 9 is valid for DOF K-means clustering.\n",
-      "Partitioning planar patch 14 into regions:\n",
-      "146.3340481306438\n",
-      "Finding K upper bound...\n",
-      "K_high = 1 is not valid, incrementing K_high...\n",
-      "K_high = 2 is valid. Starting Binary search between K_high/2 and K_high...\n",
-      "K: 1, Valid: False\n",
-      "K: 2 is valid for DOF K-means clustering.\n",
-      "[PointCloud with 57 points., PointCloud with 61 points., PointCloud with 55 points., PointCloud with 44 points., PointCloud with 45 points., PointCloud with 42 points., PointCloud with 47 points., PointCloud with 46 points., PointCloud with 45 points., PointCloud with 41 points., PointCloud with 46 points., PointCloud with 39 points., PointCloud with 46 points., PointCloud with 55 points., PointCloud with 43 points., PointCloud with 41 points., PointCloud with 30 points., PointCloud with 45 points., PointCloud with 39 points., PointCloud with 72 points., PointCloud with 68 points., PointCloud with 57 points., PointCloud with 45 points., PointCloud with 47 points., PointCloud with 45 points., PointCloud with 51 points., PointCloud with 56 points., PointCloud with 52 points., PointCloud with 58 points., PointCloud with 61 points., PointCloud with 50 points., PointCloud with 54 points., PointCloud with 52 points., PointCloud with 48 points., PointCloud with 57 points., PointCloud with 75 points., PointCloud with 53 points., PointCloud with 47 points., PointCloud with 50 points., PointCloud with 47 points., PointCloud with 39 points., PointCloud with 43 points., PointCloud with 56 points., PointCloud with 42 points., PointCloud with 42 points., PointCloud with 49 points., PointCloud with 43 points., PointCloud with 43 points., PointCloud with 46 points., PointCloud with 13 points., PointCloud with 12 points., PointCloud with 15 points., PointCloud with 18 points., PointCloud with 16 points., PointCloud with 10 points., PointCloud with 13 points., PointCloud with 14 points., PointCloud with 13 points., PointCloud with 72 points., PointCloud with 73 points.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pcds=my_avg.normal_partition()\n",
     "# write a for loop to read each pcd and give random colour to the pcd\n",
@@ -258,6 +103,8 @@
     "    cluster_collection_color.append(temp_pcd)\n",
     "\n",
     "o3d.visualization.draw_geometries(cluster_collection_color)\n",
+    "#visualize the point cloud on top of the model\n",
+    "\n",
     "\n"
    ]
   },
